bump: plugin-api 4.1.11